last minor tweaks